@@ -127,6 +127,9 @@ COMMONLIBS	=	@LIBS@
 CUPSDLIBS	=	@CUPSDLIBS@
 CXXFLAGS	=	@CPPFLAGS@ @CXXFLAGS@
 CXXLIBS		=	@CXXLIBS@
+DBUS_NOTIFIER	=	@DBUS_NOTIFIER@
+DBUS_NOTIFIERLIBS =	@DBUS_NOTIFIERLIBS@
+DNSSD_BACKEND	=	@DNSSD_BACKEND@
 DSOFLAGS	=	-L../cups @DSOFLAGS@
 DSOLIBS		=	@DSOLIBS@ $(COMMONLIBS)
 DNSSDLIBS	=	@DNSSDLIBS@
@@ -142,7 +145,6 @@ LIBCUPSIMAGEORDER =	@LIBCUPSIMAGEORDER@
 LINKCUPS	=	@LINKCUPS@ $(SSLLIBS)
 LINKCUPSIMAGE	=	@LINKCUPSIMAGE@
 LIBS		=	$(LINKCUPS) $(COMMONLIBS)
-DNSSD_BACKEND	=	@DNSSD_BACKEND@
 OPTIM		=	@OPTIM@
 OPTIONS		=
 PAMLIBS		=	@PAMLIBS@
